--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,5 @@
-NODE_ENV_PROD=http://3.34.234.154
-NODE_ENV_DEV=http://ec2-3-34-234-154.ap-northeast-2.compute.amazonaws.com:5000
-NODE_ENV=http://localhost:5000
+REACT_APP_NODE_ENV_PROD=http://3.34.234.154
+REACT_APP_NODE_ENV_DEV=http://ec2-3-34-234-154.ap-northeast-2.compute.amazonaws.com:5000
+REACT_APP_NODE_ENV=http://localhost:5000
+
+REACT_APP_SKIP_PREFLIGHT_CHECK=true
