--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_NODE_ENV=http://localhost:5000
-REACT_APP_NODE_ENV_PROD=http://3.34.234.154
-REACT_APP_BUCKET=https://team05-razvery-bucket.s3.ap-northeast-2.amazonaws.com/index.html
-REACT_APP_SKIP_PREFLIGHT_CHECK=true
+REACT_APP_NODE_ENV=http://3.34.234.154:5000
+# REACT_APP_NODE_ENV_PROD=http://localhost:5000
+# REACT_APP_BUCKET=https://team05-razvery-bucket.s3.ap-northeast-2.amazonaws.com/index.html
+# REACT_APP_SKIP_PREFLIGHT_CHECK=true
