--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.7",
     "sass": "^1.77.8",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.10",
