--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -19,11 +19,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - name: Set Production API Endpoint
-        run: echo "REACT_APP_API_URL=https://razvery.link" > .env
-      - name: Check .env File Contents
-        run: cat .env # .env 파일 내용 출력
       - run: npm ci
+        env:
+          REACT_APP_API_URL: ${{secrets.REACT_APP_API_URL}}
       # - run: npm test
       - run: npm run build
 
@@ -35,8 +33,6 @@ jobs:
     # Job에서 실행될 각각의 step
     steps:
       - uses: actions/checkout@v4
-      - name: Set Production API Endpoint
-        run: echo "REACT_APP_API_URL=https://razvery.link" > .env
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -44,9 +40,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
       - name: Install dependencies and build
+        env:
+          REACT_APP_API_URL: ${{secrets.REACT_APP_API_URL}}
         run: |
           npm ci
-          npm run build --if-present
+          npm run build
       # AWS S3 sync 명령
       - name: Deploy to S3
         run: aws s3 sync build/ s3://team05-razvery-bucket --delete
