--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: "20"
       - run: npm ci
         env:
-          REACT_APP_API_URL: ""
+          REACT_APP_API_URL: ${{secrets.REACT_APP_API_URL}}
       # - run: npm test
       - run: npm run build
 
@@ -41,7 +41,7 @@ jobs:
           aws-region: ap-northeast-2
       - name: Install dependencies and build
         env:
-          REACT_APP_API_URL: ""
+          REACT_APP_API_URL: ${{secrets.REACT_APP_API_URL}}
         run: |
           npm ci
           npm run build
